# alvildes-blog

./: pyproject.toml  requirements.txt  sitebuilder.py  wsgi.py.py
pages/: 2022-10-20.md  2022-10-23.md  2022-10-25.md
templates/: base.html  index.html  page.html
